Add some more RAG stuff

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+  @font-face {
+    font-family: "inter";
+    src: url("./assets/fonts/inter-variable.ttf");
+  }
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
